feat:jdk17-18新特性(snippet,switch return)